--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
 	"version": "0.0.1",
 	"publisher": "vscode-samples",
 	"repository": "https://github.com/Microsoft/vscode-extension-samples/helloworld-sample",
+	"enableProposedApi": "true",
 	"engines": {
-		"vscode": "^1.32.0"
+		"vscode": "^1.54.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
+		"onCommand:extension.helloWorld",
+		"onNotebook:art-book-provider"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -20,6 +22,17 @@
 			{
 				"command": "extension.helloWorld",
 				"title": "Hello World"
+			}
+		],
+		"notebookProvider": [
+			{
+				"viewType": "art-book-provider",
+				"displayName": "Art-Book Provider",
+				"selector": [
+					{
+						"filenamePattern": "*.art-book"
+					}
+				]
 			}
 		]
 	},
@@ -35,7 +48,7 @@
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^12.12.0",
-		"@types/vscode": "^1.32.0",
+		"@types/vscode": "^1.54.0",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
 		"source-map-support": "^0.5.12",
